Add full SEO, GEO, AEO meta tags + JSON-LD structured data

--- a/index.html
+++ b/index.html
@@ -4,8 +4,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sayak Satpathi's Portfolio</title>
-    <!-- Google Analytics 4 -->
+
+    <!-- ═══ PRIMARY SEO ═══ -->
+    <title>Sayak Satpathi | AI & ML Student · Full Stack Developer · India</title>
+    <meta name="description" content="Sayak Satpathi is a 2nd-year B.Tech AI & ML student at SMIT, a full-stack developer and UI/UX enthusiast from India. Explore projects, skills, and contact info.">
+    <meta name="keywords" content="Sayak Satpathi, AI ML developer, full stack developer India, SMIT student portfolio, machine learning student, web developer Sikkim, React developer, Python developer">
+    <meta name="author" content="Sayak Satpathi">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <link rel="canonical" href="https://sayaksatpathi.netlify.app/">
+
+    <!-- ═══ OPEN GRAPH (Facebook, LinkedIn, WhatsApp) ═══ -->
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Sayak Satpathi | AI & ML Student · Full Stack Developer">
+    <meta property="og:description" content="2nd-year B.Tech AI & ML student at SMIT. Full-stack developer and UI/UX enthusiast building scalable web apps and ML solutions.">
+    <meta property="og:url" content="https://sayaksatpathi.netlify.app/">
+    <meta property="og:image" content="https://github.com/sayaksatpathi.png">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="400">
+    <meta property="og:image:alt" content="Sayak Satpathi - AI & ML Developer">
+    <meta property="og:site_name" content="Sayak Satpathi Portfolio">
+    <meta property="og:locale" content="en_IN">
+    <meta property="profile:first_name" content="Sayak">
+    <meta property="profile:last_name" content="Satpathi">
+    <meta property="profile:username" content="sayaksatpathi">
+
+    <!-- ═══ TWITTER / X CARD ═══ -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@sayaksatpathi">
+    <meta name="twitter:creator" content="@sayaksatpathi">
+    <meta name="twitter:title" content="Sayak Satpathi | AI & ML Student · Full Stack Developer">
+    <meta name="twitter:description" content="2nd-year B.Tech AI & ML student at SMIT. Full-stack developer and UI/UX enthusiast building scalable web apps and ML solutions.">
+    <meta name="twitter:image" content="https://github.com/sayaksatpathi.png">
+    <meta name="twitter:image:alt" content="Sayak Satpathi - AI & ML Developer">
+
+    <!-- ═══ GEO TAGS ═══ -->
+    <meta name="geo.region" content="IN-SK">
+    <meta name="geo.placename" content="Sikkim, India">
+    <meta name="geo.position" content="27.3314;88.6138">
+    <meta name="ICBM" content="27.3314, 88.6138">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+
+    <!-- ═══ AEO — JSON-LD STRUCTURED DATA (for AI/LLM/Answer Engines) ═══ -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Person",
+          "@id": "https://sayaksatpathi.netlify.app/#person",
+          "name": "Sayak Satpathi",
+          "givenName": "Sayak",
+          "familyName": "Satpathi",
+          "url": "https://sayaksatpathi.netlify.app/",
+          "image": "https://github.com/sayaksatpathi.png",
+          "email": "sayaksatpathi12@gmail.com",
+          "description": "2nd-year B.Tech AI & ML student at Sikkim Manipal Institute of Technology (SMIT). Full-stack developer, UI/UX enthusiast and open source contributor from India.",
+          "jobTitle": "AI & ML Student | Full Stack Developer",
+          "knowsAbout": ["Artificial Intelligence", "Machine Learning", "Full Stack Development", "React", "Node.js", "Python", "UI/UX Design", "Cybersecurity"],
+          "alumniOf": {
+            "@type": "EducationalOrganization",
+            "name": "Sikkim Manipal Institute of Technology",
+            "url": "https://smit.smu.edu.in"
+          },
+          "sameAs": [
+            "https://github.com/sayaksatpathi",
+            "https://www.linkedin.com/in/sayak-satpathi-34031b240",
+            "https://x.com/sayaksatpathi",
+            "https://instagram.com/sayaksatpathi"
+          ],
+          "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IN",
+            "addressRegion": "Sikkim"
+          }
+        },
+        {
+          "@type": "WebSite",
+          "@id": "https://sayaksatpathi.netlify.app/#website",
+          "url": "https://sayaksatpathi.netlify.app/",
+          "name": "Sayak Satpathi Portfolio",
+          "description": "Portfolio of Sayak Satpathi — AI & ML student and full-stack developer.",
+          "author": {"@id": "https://sayaksatpathi.netlify.app/#person"},
+          "inLanguage": "en-IN",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://sayaksatpathi.netlify.app/?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "Who is Sayak Satpathi?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sayak Satpathi is a 2nd-year B.Tech student in Artificial Intelligence & Machine Learning at Sikkim Manipal Institute of Technology (SMIT), India. He is a passionate full-stack developer, UI/UX enthusiast, and open-source contributor."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "What does Sayak Satpathi do?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sayak builds full-stack web applications and ML-powered tools. His skills include Python, JavaScript, React, Node.js, Machine Learning, and UI/UX design."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How can I contact Sayak Satpathi?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "You can contact Sayak via email at sayaksatpathi12@gmail.com or connect on LinkedIn at linkedin.com/in/sayak-satpathi-34031b240."
+              }
+            }
+          ]
+        }
+      ]
+    }
+    </script>
+
+    <!-- ═══ Google Analytics 4 ═══ -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NSYDRQYWX"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
