--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <a href="#skills-section" class="hover:text-gray-500 transition-colors">Skills</a>
                 <a href="#education-section" class="hover:text-gray-500 transition-colors">Education</a>
                 <a href="#projects-section" class="hover:text-gray-500 transition-colors">Projects</a>
+                <a href="#activity-section" class="hover:text-gray-500 transition-colors">Activity</a>
                 <a href="#about-section" class="hover:text-gray-500 transition-colors">About</a>
                 <a href="#contact-section" class="hover:text-gray-500 transition-colors">Contact</a>
             </nav>
