fix: self-host Tailwind CSS and Lucide icons - eliminate CDN failures on mobile

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         gtag('js', new Date());
         gtag('config', 'G-9NSYDRQYWX');
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/tailwind.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="js/lucide.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
