--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </header>
 
     <div class="relative">
-        <div style="height: 200vh;">
+        <div class="hero-parallax-spacer" style="height: 200vh;">
             <section id="hero-section"
                 class="section bg-light px-4 sm:px-6 lg:px-8 sticky top-0 h-screen relative overflow-hidden">
                 <!-- Background Elements -->
