--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </div>
             </section>
 
-            <div class="relative z-10 bg-dark" style="min-height: 100vh;">
+            <div id="dark-wrapper" class="relative z-10 bg-dark" style="min-height: 100vh;">
                 <section id="skills-section"
                     class="section bg-dark px-4 sm:px-8 section-compact relative overflow-hidden">
                     <!-- Background Elements -->
@@ -894,10 +894,11 @@
                                         class="text-3xl sm:text-4xl lg:text-5xl xl:text-6xl font-black tracking-tight leading-tight mb-4 sm:mb-6">
                                         Building <br />
                                         <span class="relative inline-block">
+                                            <span class="invisible select-none" aria-hidden="true">breaking</span>
                                             <span id="text-flicker-1"
-                                                class="text-red-500 line-through transition-opacity duration-300 ease-in-out absolute left-0">breaking</span>
+                                                class="text-red-500 line-through transition-opacity duration-300 ease-in-out absolute left-0 top-0">breaking</span>
                                             <span id="text-flicker-2"
-                                                class="text-green-500 transition-opacity duration-300 ease-in-out opacity-0 absolute left-0">fixing</span>
+                                                class="text-green-500 transition-opacity duration-300 ease-in-out opacity-0 absolute left-0 top-0">fixing</span>
                                         </span>
                                         <span class="text-blue-400">*stuff</span> on <br />
                                         the <span
