--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 </section>
 
                 <main class="bg-dark relative">
-                    <section id="education-section" class="section bg-dark px-4 sm:px-6 lg:px-8">
+                    <section id="education-section" class="section section-compact bg-dark px-4 sm:px-6 lg:px-8">
                         <div class="container mx-auto">
                             <div class="grid lg:grid-cols-2 gap-6 lg:gap-8 items-center mb-8 sm:mb-12">
                                 <div class="reveal">
@@ -548,7 +548,7 @@
                         </div>
                     </section>
 
-                    <section id="projects-section" class="section bg-dark px-4 sm:px-6 lg:px-8">
+                    <section id="projects-section" class="section section-compact bg-dark px-4 sm:px-6 lg:px-8">
                         <div class="container mx-auto">
                             <div class="grid lg:grid-cols-2 gap-6 lg:gap-8 items-center mb-12 lg:mb-16">
                                 <div class="reveal">
@@ -681,21 +681,20 @@
                         </div>
                     </section>
 
-                    <section id="activity-section" class="section bg-dark px-4 sm:px-8">
+                    <section id="activity-section" class="section section-compact bg-dark px-4 sm:px-8">
                         <div class="container mx-auto">
                             <div class="grid lg:grid-cols-2 gap-6 lg:gap-8 items-center mb-12 lg:mb-16">
                                 <div class="reveal">
                                     <h2
                                         class="text-3xl sm:text-4xl md:text-5xl lg:text-7xl font-black tracking-tighter">
-                                        ACTIVITY & MUSIC /</h2>
-                                    <p class="text-xs sm:text-sm text-gray-400 mt-2">( ACTIVITY & MUSIC )</p>
+                                        ACTIVITY /</h2>
+                                    <p class="text-xs sm:text-sm text-gray-400 mt-2">( GITHUB ACTIVITY )</p>
                                 </div>
                                 <p class="text-sm sm:text-base text-gray-300 max-w-md reveal"
-                                    style="transition-delay: 150ms;">Dive into my coding journey and musical vibes that
-                                    fuel my creativity.</p>
+                                    style="transition-delay: 150ms;">A live look at my GitHub contributions and coding activity throughout the year.</p>
                             </div>
 
-                            <div class="grid lg:grid-cols-2 gap-6 lg:gap-8">
+                            <div class="grid gap-6 lg:gap-8">
                                 <!-- GitHub Activity Card -->
                                 <div
                                     class="reveal bg-gradient-to-br from-gray-900 to-gray-800 border border-gray-700 rounded-2xl p-4 sm:p-6 hover:border-green-500 transition-all duration-500">
@@ -709,7 +708,7 @@
                                             <p class="text-xs sm:text-sm text-gray-400">2026 contributions</p>
                                         </div>
                                     </div>
-                                    <div class="bg-gray-800/50 rounded-xl p-3 sm:p-4 mb-4 overflow-x-auto" id="github-chart-wrapper">
+                                    <div class="bg-gray-800/50 rounded-xl p-2 sm:p-4 mb-4 overflow-x-auto" id="github-chart-wrapper" style="-webkit-overflow-scrolling: touch; scrollbar-width: thin; scrollbar-color: #4ade80 #1f2937;">
                                         <div id="github-chart-container">
                                             <div class="text-gray-500 text-xs text-center py-6 animate-pulse">Loading live contributions from GitHub...</div>
                                         </div>
@@ -720,119 +719,6 @@
                                     </div>
                                 </div>
 
-                                <!-- Music Card -->
-                                <div class="reveal bg-gradient-to-br from-gray-900 to-gray-800 border border-gray-700 rounded-2xl p-4 sm:p-6 hover:border-purple-500 transition-all duration-500"
-                                    style="transition-delay: 200ms;">
-                                    <div class="flex items-center gap-3 mb-4 sm:mb-6">
-                                        <div
-                                            class="w-8 sm:w-10 h-8 sm:h-10 bg-purple-500/20 rounded-lg flex items-center justify-center">
-                                            <i data-lucide="headphones"
-                                                class="w-4 sm:w-5 h-4 sm:h-5 text-purple-400"></i>
-                                        </div>
-                                        <div>
-                                            <h3 class="text-lg sm:text-xl font-bold text-white">Currently Vibing</h3>
-                                            <p class="text-xs sm:text-sm text-gray-400">My coding soundtrack</p>
-                                        </div>
-                                    </div>
-
-                                    <!-- Music Player (Network-friendly version) -->
-                                    <div id="current-song" class="bg-gray-800/50 rounded-xl p-3 sm:p-4 mb-4">
-                                        <div class="flex items-center gap-3 sm:gap-4 mb-4">
-                                            <div id="song-thumbnail"
-                                                class="w-12 sm:w-16 h-12 sm:h-16 bg-gradient-to-br from-purple-500 to-pink-500 rounded-lg flex items-center justify-center overflow-hidden">
-                                                <img id="song-image"
-                                                    src="https://i.ytimg.com/vi/jfKfPfyJRdk/mqdefault.jpg"
-                                                    alt="Song thumbnail" class="w-full h-full object-cover rounded-lg">
-                                            </div>
-                                            <div class="flex-1">
-                                                <p id="song-title" class="font-bold text-white mb-1">Lofi Hip Hop Radio
-                                                </p>
-                                                <p id="song-artist" class="text-sm text-gray-400 mb-2">ChilledCow •
-                                                    Coding/Study Music</p>
-                                                <div class="w-full bg-gray-700 rounded-full h-1">
-                                                    <div id="song-progress"
-                                                        class="bg-purple-500 h-1 rounded-full transition-all duration-1000"
-                                                        style="width: 0%"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!-- Status message for network issues -->
-                                        <div id="youtube-error-message"
-                                            class="text-center py-2 px-4 bg-gray-700/50 rounded-lg mb-3 hidden">
-                                            <p class="text-amber-400 text-sm font-medium mb-1">⚠️ Network Connection
-                                                Issue</p>
-                                            <p class="text-gray-300 text-xs">Music player is running in offline mode.
-                                                Some features may be limited.</p>
-                                        </div>
-
-                                        <!-- Audio placeholder for when network is available -->
-                                        <audio id="audio-player" class="hidden"></audio>
-
-                                        <!-- Placeholder for YouTube iframe (when network available) -->
-                                        <div id="youtube-container" class="hidden"></div>
-                                    </div>
-
-                                    <!-- Music Controls -->
-                                    <div class="flex items-center justify-between mb-4">
-                                        <div class="flex items-center gap-2">
-                                            <button id="rewind-btn"
-                                                class="w-8 h-8 bg-gray-700 hover:bg-gray-600 rounded-full flex items-center justify-center transition-colors"
-                                                title="Rewind 10s">
-                                                <span class="text-xs text-white font-bold">-10</span>
-                                            </button>
-                                            <button id="prev-btn"
-                                                class="w-8 h-8 bg-gray-700 hover:bg-gray-600 rounded-full flex items-center justify-center transition-colors">
-                                                <i data-lucide="skip-back" class="w-4 h-4 text-white"></i>
-                                            </button>
-                                            <button id="play-pause-btn"
-                                                class="w-12 h-12 bg-purple-500 hover:bg-purple-600 rounded-full flex items-center justify-center transition-colors">
-                                                <i data-lucide="play" class="w-6 h-6 text-white" id="play-icon"></i>
-                                                <i data-lucide="pause" class="w-6 h-6 text-white hidden"
-                                                    id="pause-icon"></i>
-                                            </button>
-                                            <button id="next-btn"
-                                                class="w-8 h-8 bg-gray-700 hover:bg-gray-600 rounded-full flex items-center justify-center transition-colors">
-                                                <i data-lucide="skip-forward" class="w-4 h-4 text-white"></i>
-                                            </button>
-                                            <button id="forward-btn"
-                                                class="w-8 h-8 bg-gray-700 hover:bg-gray-600 rounded-full flex items-center justify-center transition-colors"
-                                                title="Forward 10s">
-                                                <span class="text-xs text-white font-bold">+10</span>
-                                            </button>
-                                        </div>
-                                        <div class="flex items-center gap-2">
-                                            <button id="loop-btn"
-                                                class="w-8 h-8 bg-gray-700 hover:bg-purple-500 rounded-full flex items-center justify-center transition-colors"
-                                                title="Loop">
-                                                <i data-lucide="repeat" class="w-4 h-4 text-white"></i>
-                                            </button>
-                                            <i data-lucide="volume-2" class="w-4 h-4 text-gray-400"></i>
-                                            <div class="w-16 bg-gray-700 rounded-full h-1 cursor-pointer"
-                                                id="volume-slider">
-                                                <div class="bg-white h-1 rounded-full w-1/2" id="volume-progress"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- Music Stats -->
-                                    <div class="grid grid-cols-2 gap-4 mb-4">
-                                        <div class="text-center">
-                                            <div class="text-lg font-bold text-purple-400" id="songs-today">0</div>
-                                            <div class="text-xs text-gray-400">Songs Today</div>
-                                        </div>
-                                        <div class="text-center">
-                                            <div class="text-lg font-bold text-green-400" id="listening-time">0h</div>
-                                            <div class="text-xs text-gray-400">Listening Time</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="flex items-center justify-between text-sm">
-                                        <span class="text-gray-400">Mood</span>
-                                        <span id="current-mood" class="text-purple-400 font-semibold">🎧
-                                            Discovering</span>
-                                    </div>
-                                </div>
                             </div>
 
                             <!-- Fun Stats -->
@@ -858,7 +744,7 @@
                         </div>
                     </section>
 
-                    <section id="about-section" class="section bg-dark px-4 sm:px-8 relative overflow-hidden">
+                    <section id="about-section" class="section section-compact bg-dark px-4 sm:px-8 relative overflow-hidden">
                         <!-- Background Elements -->
                         <div class="absolute inset-0 bg-gradient-to-br from-blue-900/10 to-purple-900/10"></div>
                         <div class="absolute top-20 right-20 w-72 h-72 bg-blue-500/5 rounded-full blur-3xl"></div>
@@ -993,10 +879,10 @@
                         </div>
                     </section>
 
-                    <section id="contact-section" class="section p-0 relative bg-cover bg-center bg-no-repeat"
-                        style="background-image: url('https://images.unsplash.com/photo-1502444330042-d1a1ddf9bb5b?q=80&w=2073&auto=format&fit=crop');">
+                    <section id="contact-section" class="section section-compact p-0 relative bg-cover bg-center bg-no-repeat"
+                        style="min-height: 60vh; background-image: url('https://images.unsplash.com/photo-1502444330042-d1a1ddf9bb5b?q=80&w=2073&auto=format&fit=crop');">
                         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-                        <div class="relative z-10 h-full w-full flex items-center justify-center">
+                        <div class="relative z-10 h-full w-full flex items-center justify-center py-24 sm:py-32">
                             <div class="text-center px-4 sm:px-6 lg:px-8">
                                 <h2
                                     class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-black text-white mb-4 sm:mb-6 tracking-tight">
