--- a/index.html
+++ b/index.html
@@ -782,9 +782,9 @@
                                         <span class="relative inline-block">
                                             <span class="invisible select-none" aria-hidden="true">breaking</span>
                                             <span id="text-flicker-1"
-                                                class="text-red-500 line-through absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 1;">breaking</span>
+                                                class="text-red-500 line-through absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 1; z-index: 2;">breaking</span>
                                             <span id="text-flicker-2"
-                                                class="text-green-500 absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 0;">fixing</span>
+                                                class="text-green-500 absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 0; z-index: 1;">fixing</span>
                                         </span>
                                         <span class="text-blue-400">*stuff</span> on <br />
                                         the <span
