fix: sync placeholder width + min-w-[200px] + 3-word cycle for text flicker

--- a/index.html
+++ b/index.html
@@ -779,12 +779,10 @@
                                     <h2
                                         class="text-3xl sm:text-4xl lg:text-5xl xl:text-6xl font-black tracking-tight leading-tight mb-4 sm:mb-6">
                                         Building <br />
-                                        <span class="relative inline-block">
-                                            <span class="invisible select-none" aria-hidden="true">breaking</span>
-                                            <span id="text-flicker-1"
-                                                class="text-red-500 line-through absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 1; z-index: 2;">breaking</span>
-                                            <span id="text-flicker-2"
-                                                class="text-green-500 absolute left-0 top-0" style="transition: opacity 0.5s ease; opacity: 0; z-index: 1;">fixing</span>
+                                        <span class="relative inline-block min-w-[200px]">
+                                            <span id="text-placeholder" class="invisible select-none" aria-hidden="true">breaking</span>
+                                            <span id="text-flicker"
+                                                class="text-red-500 line-through absolute left-0 top-0" style="transition: opacity 0.5s ease;">breaking</span>
                                         </span>
                                         <span class="text-blue-400">*stuff</span> on <br />
                                         the <span
