Update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </div>
             </section>
 
-            <div id="dark-wrapper" class="relative z-10 bg-dark" style="min-height: 100vh;">
+            <div id="dark-wrapper" class="relative z-10 bg-dark">
                 <section id="skills-section"
                     class="section bg-dark px-4 sm:px-8 section-compact relative overflow-hidden">
                     <!-- Background Elements -->
