perf: major mobile scroll optimization - disable blur/animations on mobile, skip touch effects

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                 class="section bg-light px-4 sm:px-6 lg:px-8 sticky top-0 h-screen relative overflow-hidden" style="will-change:transform;transform:translateZ(0)">
                 <!-- Background Elements -->
                 <div
-                    class="absolute top-5 sm:top-10 right-5 sm:right-10 w-48 sm:w-80 lg:w-96 h-48 sm:h-80 lg:h-96 bg-blue-500/5 rounded-full blur-3xl animate-pulse" style="will-change:opacity;transform:translateZ(0)">
+                    class="hidden sm:block absolute top-5 sm:top-10 right-5 sm:right-10 w-48 sm:w-80 lg:w-96 h-48 sm:h-80 lg:h-96 bg-blue-500/5 rounded-full blur-3xl animate-pulse" style="will-change:opacity;transform:translateZ(0)">
                 </div>
                 <div
-                    class="absolute bottom-5 sm:bottom-10 left-5 sm:left-10 w-40 sm:w-64 lg:w-80 h-40 sm:h-64 lg:h-80 bg-purple-500/5 rounded-full blur-3xl animate-pulse" style="will-change:opacity;transform:translateZ(0)">
+                    class="hidden sm:block absolute bottom-5 sm:bottom-10 left-5 sm:left-10 w-40 sm:w-64 lg:w-80 h-40 sm:h-64 lg:h-80 bg-purple-500/5 rounded-full blur-3xl animate-pulse" style="will-change:opacity;transform:translateZ(0)">
                 </div>
 
                 <div class="container mx-auto flex flex-col justify-center h-full relative z-10 px-4 sm:px-0">
@@ -304,7 +304,7 @@
                             style="transition-delay: 150ms;">
                             <div class="relative group w-full max-w-xs sm:max-w-sm">
                                 <div
-                                    class="absolute inset-0 bg-gradient-to-r from-blue-400 to-purple-500 rounded-2xl blur-2xl opacity-20 group-hover:opacity-30 transition-opacity duration-500">
+                                    class="hidden sm:block absolute inset-0 bg-gradient-to-r from-blue-400 to-purple-500 rounded-2xl blur-2xl opacity-20 group-hover:opacity-30 transition-opacity duration-500">
                                 </div>
                                 <img src="https://github.com/sayaksatpathi.png"
                                     alt="Sayak Satpathi - AI & ML Engineer"
@@ -339,8 +339,8 @@
                 <section id="skills-section"
                     class="section bg-dark px-4 sm:px-8 section-compact relative overflow-hidden">
                     <!-- Background Elements -->
-                    <div class="absolute top-0 left-0 w-72 h-72 bg-blue-500/5 rounded-full blur-3xl" style="transform:translateZ(0)"></div>
-                    <div class="absolute bottom-0 right-0 w-80 h-80 bg-purple-500/5 rounded-full blur-3xl" style="transform:translateZ(0)"></div>
+                    <div class="hidden sm:block absolute top-0 left-0 w-72 h-72 bg-blue-500/5 rounded-full blur-3xl" style="transform:translateZ(0)"></div>
+                    <div class="hidden sm:block absolute bottom-0 right-0 w-80 h-80 bg-purple-500/5 rounded-full blur-3xl" style="transform:translateZ(0)"></div>
 
                     <div class="container mx-auto relative z-10">
                         <div class="grid md:grid-cols-2 gap-8 items-center mb-16">
@@ -747,8 +747,8 @@
                     <section id="about-section" class="section section-compact bg-dark px-4 sm:px-8 relative overflow-hidden">
                         <!-- Background Elements -->
                         <div class="absolute inset-0 bg-gradient-to-br from-blue-900/10 to-purple-900/10"></div>
-                        <div class="absolute top-20 right-20 w-72 h-72 bg-blue-500/5 rounded-full blur-3xl"></div>
-                        <div class="absolute bottom-20 left-20 w-96 h-96 bg-purple-500/5 rounded-full blur-3xl"></div>
+                        <div class="hidden sm:block absolute top-20 right-20 w-72 h-72 bg-blue-500/5 rounded-full blur-3xl"></div>
+                        <div class="hidden sm:block absolute bottom-20 left-20 w-96 h-96 bg-purple-500/5 rounded-full blur-3xl"></div>
 
                         <div class="container mx-auto relative z-10">
                             <!-- Main Content -->
